<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/title"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1"
                    android:textSize="14sp"
                    />
                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UdacityMan"
                    android:textSize="14sp"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SuperMan"
                    android:textSize="14sp"
                    android:checked="false"/>
                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="McdonaldMan"
                    android:textSize="14sp"
                    android:checked="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2"
                    android:textSize="14sp"
                    />
                <RadioGroup
                    android:id="@+id/radiogroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/correct1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="200"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hmm, not sure."
                        android:textSize="14sp"
                        android:checked="false"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3"
                    android:textSize="14sp"
                    />
                <RadioGroup
                    android:id="@+id/radiogroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="California"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/correct2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Los Angeles"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New York"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="All"
                        android:textSize="14sp"
                        android:checked="false"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4"
                    android:textSize="14sp"
                    />
                <RadioGroup
                    android:id="@+id/radiogroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="East Coast"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/correct3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="West Coast"
                        android:textSize="14sp"
                        android:checked="false"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Maybe both"
                        android:textSize="14sp"
                        android:checked="false"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/result_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:hint="@string/hint" />
                <ImageView
                    android:id="@+id/result_img"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:src="@drawable/think"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="submit"
            android:text="SUBMIT" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="reset"
            android:text="RESET" />
    </RelativeLayout>
</ScrollView>